...
        android:layout_width="@dimen/song_list_album_art"
        android:layout_height="@dimen/song_list_album_art"
        />


    <TextView
        android:id="@+id/primary_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="@dimen/song_list_padding"
        android:focusable="true"
        android:focusableInTouchMode="true"
...
