...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="75dp"
    tools:context=".presentation.fragments.SongListFragment">

        <ListView
            android:id="@+id/song_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

</LinearLayout>
